--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -1,4 +1,5 @@
 .hero {
+  background-color: $main-bg-color;
   .container {
     @media screen and (min-width: 319px) and (max-width: 767px) {
       display: flex;
