--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -3,7 +3,7 @@
     <p class="products__pre-title">100% natural</p>
     <h2 class="products__title">products</h2>
     <div class="products__cards">
-      <div class="products__card products__card--ice-cream">
+      <div class="products__card">
         <picture>
           <source
             srcset="
@@ -59,32 +59,34 @@
           />
         </picture>
         <span class="products__circle products__circle--icecream"></span>
-        <div class="card__item">
-          <h3 class="card__title">ice cream</h3>
-          <p class="card__text">
-            Soft ice cream with a delicate taste. Made with milk, cream, sugar
-            and natural stabilizer
-          </p>
-          <button
-            class="card__button js-open-modal main-button"
-            data-modal="5"
-            type="button"
-          >
-            <svg
-              class="button-icon"
-              width="42"
-              height="15"
-              xmlns="http://www.w3.org/2000/svg"
+        <div class="card__item card__item--ice-cream">
+          <div class="card__content">
+            <h3 class="card__title">ice cream</h3>
+            <p class="card__text">
+              Soft ice cream with a delicate taste. Made with milk, cream, sugar
+              and natural stabilizer
+            </p>
+            <button
+              class="card__button js-open-modal main-button"
+              data-modal="5"
+              type="button"
             >
-              <path
-                d="M41.3212 8.59578C41.7117 8.20525 41.7117 7.57209 41.3212 7.18157L34.9572 0.817604C34.5667 0.42708 33.9336 0.42708 33.543 0.817604C33.1525 1.20813 33.1525 1.84129 33.543 2.23182L39.1999 7.88867L33.543 13.5455C33.1525 13.9361 33.1525 14.5692 33.543 14.9597C33.9336 15.3503 34.5667 15.3503 34.9572 14.9597L41.3212 8.59578ZM0.379395 8.88867H40.6141V6.88867H0.379395V8.88867Z"
-                fill="#131313"
-              />
-            </svg>
-          </button>
+              <svg
+                class="button-icon"
+                width="42"
+                height="15"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M41.3212 8.59578C41.7117 8.20525 41.7117 7.57209 41.3212 7.18157L34.9572 0.817604C34.5667 0.42708 33.9336 0.42708 33.543 0.817604C33.1525 1.20813 33.1525 1.84129 33.543 2.23182L39.1999 7.88867L33.543 13.5455C33.1525 13.9361 33.1525 14.5692 33.543 14.9597C33.9336 15.3503 34.5667 15.3503 34.9572 14.9597L41.3212 8.59578ZM0.379395 8.88867H40.6141V6.88867H0.379395V8.88867Z"
+                  fill="#131313"
+                />
+              </svg>
+            </button>
+          </div>
         </div>
       </div>
-      <div class="products__card products__card--ice-coffee">
+      <div class="products__card">
         <picture>
           <source
             srcset="
@@ -140,29 +142,31 @@
           />
         </picture>
         <span class="products__circle products__circle--icecoffee"></span>
-        <div class="card__item">
-          <h3 class="card__title">ice coffee</h3>
-          <p class="card__text">
-            Fragrant invigorating drink created from 100% natural ingredients
-            without the use of preservatives and flavor enhancers
-          </p>
-          <button
-            class="card__button js-open-modal main-button"
-            data-modal="6"
-            type="button"
-          >
-            <svg
-              class="button-icon"
-              width="40"
-              height="15"
-              xmlns="http://www.w3.org/2000/svg"
+        <div class="card__item card__item--ice-coffee">
+          <div class="card__content">
+            <h3 class="card__title">ice coffee</h3>
+            <p class="card__text">
+              Fragrant invigorating drink created from 100% natural ingredients
+              without the use of preservatives and flavor enhancers
+            </p>
+            <button
+              class="card__button js-open-modal main-button"
+              data-modal="6"
+              type="button"
             >
-              <path
-                d="M41.3212 8.59578C41.7117 8.20525 41.7117 7.57209 41.3212 7.18157L34.9572 0.817604C34.5667 0.42708 33.9336 0.42708 33.543 0.817604C33.1525 1.20813 33.1525 1.84129 33.543 2.23182L39.1999 7.88867L33.543 13.5455C33.1525 13.9361 33.1525 14.5692 33.543 14.9597C33.9336 15.3503 34.5667 15.3503 34.9572 14.9597L41.3212 8.59578ZM0.379395 8.88867H40.6141V6.88867H0.379395V8.88867Z"
-                fill="#131313"
-              />
-            </svg>
-          </button>
+              <svg
+                class="button-icon"
+                width="40"
+                height="15"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M41.3212 8.59578C41.7117 8.20525 41.7117 7.57209 41.3212 7.18157L34.9572 0.817604C34.5667 0.42708 33.9336 0.42708 33.543 0.817604C33.1525 1.20813 33.1525 1.84129 33.543 2.23182L39.1999 7.88867L33.543 13.5455C33.1525 13.9361 33.1525 14.5692 33.543 14.9597C33.9336 15.3503 34.5667 15.3503 34.9572 14.9597L41.3212 8.59578ZM0.379395 8.88867H40.6141V6.88867H0.379395V8.88867Z"
+                  fill="#131313"
+                />
+              </svg>
+            </button>
+          </div>
         </div>
       </div>
 
@@ -222,29 +226,31 @@
           />
         </picture>
         <span class="products__circle products__circle--milksnakes"></span>
-        <div class="card__item">
-          <h3 class="card__title">milkshakes</h3>
-          <p class="card__text">
-            Sweet drinks based on milk and ice cream, supplemented with syrups,
-            fruits, berries and other sweets of your choice
-          </p>
-          <button
-            class="card__button js-open-modal main-button"
-            data-modal="7"
-            type="button"
-          >
-            <svg
-              class="button-icon"
-              width="40"
-              height="15"
-              xmlns="http://www.w3.org/2000/svg"
+        <div class="card__item card__item--milkshakes">
+          <div class="card__content">
+            <h3 class="card__title">milkshakes</h3>
+            <p class="card__text">
+              Sweet drinks based on milk and ice cream, supplemented with
+              syrups, fruits, berries and other sweets of your choice
+            </p>
+            <button
+              class="card__button js-open-modal main-button"
+              data-modal="7"
+              type="button"
             >
-              <path
-                d="M41.3212 8.59578C41.7117 8.20525 41.7117 7.57209 41.3212 7.18157L34.9572 0.817604C34.5667 0.42708 33.9336 0.42708 33.543 0.817604C33.1525 1.20813 33.1525 1.84129 33.543 2.23182L39.1999 7.88867L33.543 13.5455C33.1525 13.9361 33.1525 14.5692 33.543 14.9597C33.9336 15.3503 34.5667 15.3503 34.9572 14.9597L41.3212 8.59578ZM0.379395 8.88867H40.6141V6.88867H0.379395V8.88867Z"
-                fill="#131313"
-              />
-            </svg>
-          </button>
+              <svg
+                class="button-icon"
+                width="40"
+                height="15"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M41.3212 8.59578C41.7117 8.20525 41.7117 7.57209 41.3212 7.18157L34.9572 0.817604C34.5667 0.42708 33.9336 0.42708 33.543 0.817604C33.1525 1.20813 33.1525 1.84129 33.543 2.23182L39.1999 7.88867L33.543 13.5455C33.1525 13.9361 33.1525 14.5692 33.543 14.9597C33.9336 15.3503 34.5667 15.3503 34.9572 14.9597L41.3212 8.59578ZM0.379395 8.88867H40.6141V6.88867H0.379395V8.88867Z"
+                  fill="#131313"
+                />
+              </svg>
+            </button>
+          </div>
         </div>
       </div>
     </div>
